fix: aligns icons

--- a/client/dashboard/app/styles/components/Tile.scss
+++ b/client/dashboard/app/styles/components/Tile.scss
@@ -39,12 +39,13 @@
 }
 
 div.kz-wrapper {
+  text-align: center;
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: fit-content;
-  margin: 1rem auto;
+  margin: 1rem;
   padding: 0.5rem;
   height: fit-content;
   cursor: pointer;
@@ -69,10 +70,8 @@ div.kz-wrapper {
 
 .tile {
   height: 5.5rem;
-  width: 9rem;
+  width: inherit;
   .icon {
-    position: absolute;
-    left: 2.5rem;
     svg {
       width: 5rem;
       height: 6rem;
@@ -149,10 +148,8 @@ div.kz-project-tile {
       height: 3rem;
       .icon {
         svg {
-          position: relative;
-          right: 1rem;
           width: 3rem;
-          height: 3rem;
+          height: 4rem;
           color: $primary;
         }
       }
